<resources>
    <string name="app_name">saints-xctf-android</string>
    <string name="saintsxctf">SaintsXCTF</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="newlog">newlog</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="group">group</string>
    <string name="settings">settings</string>
    <string name="run_name">Run Name:</string>
    <string name="location">Location:</string>
    <string name="date">Date:</string>
    <string name="_01_01_2017">1-01-2017</string>
    <string name="workout_type">Workout Type:</string>
    <string name="pick_date">Pick Date</string>
    <string name="distance">Distance:</string>
    <string name="metric">Metric:</string>
    <string name="time">Time:</string>
    <string name="description">Description:</string>
    <string name="title_log_dialog">Enter a Log</string>
    <string name="title_settings_dialog">Change Settings</string>
    <string name="title_pickgroup_dialog">Pick Groups</string>
    <string name="feel">Feel:</string>
    <string name="password">Password: </string>
    <string name="username">Username: </string>
    <string name="first_name">First Name:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="last_name">Last Name:</string>

    <string-array name="log_type_array">
        <item>run</item>
        <item>bike</item>
        <item>swim</item>
        <item>other</item>
    </string-array>

    <string-array name="leaderboard_filters">
        <item>Miles All Time</item>
        <item>Miles Past Year</item>
        <item>Miles Past Month</item>
        <item>Miles Past Week</item>
    </string-array>

    <string-array name="log_metric_array">
        <item>miles</item>
        <item>kilometers</item>
        <item>meters</item>
    </string-array>

    <string name="no_username">No Username Entered</string>
    <string name="no_password">No Password Entered</string>
    <string name="password_length">Password Must Be 6 Characters Long</string>
    <string name="no_cpassword">No Confirm Password Entered</string>
    <string name="no_password_match">Confirm Password and Password Must Match</string>
    <string name="activation_code">Activation Code</string>
    <string name="email">Email:</string>
    <string name="no_activation_code">No Activation Code Entered</string>
    <string name="no_email">No Email Entered</string>
    <string name="invalid_email">Invalid Email Address Entered</string>
    <string name="no_last_name">No Last Name Entered</string>
    <string name="invalid_last_name">Invalid Last Name Entered</string>
    <string name="no_first_name">No First Name Entered</string>
    <string name="invalid_first_name">Invalid First Name Entered</string>
    <string name="invalid_username">Invalid Username Entered</string>
    <string name="invalid_user">Invalid User Entered</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="refresh_button">Refresh Button</string>
    <string name="invalid_password">Invalid Password Entered</string>
    <string name="server_error">Server Error, Try Again</string>
    <string name="invalid_activation_code">Invalid Activation Code Entered</string>
    <string name="log_out">log out</string>
    <string name="comment">Comment</string>
    <string name="log_description">Log Description</string>
    <string name="log_time">Log Time</string>
    <string name="log_distance">Log Distance</string>
    <string name="log_location">Log Location</string>
    <string name="log_type">Log Type</string>
    <string name="log_date">Log Date</string>
    <string name="log_name">Log Name</string>
    <string name="first_last">First Last</string>
    <string name="comment_date">Comment Date</string>
    <string name="comment_content">Comment Content</string>
    <string name="ms">:</string>
    <string name="average">AVERAGE</string>
    <string name="new_log">New Log</string>
    <string name="no_log_name">No Log Name Entered</string>
    <string name="invalid_date_future">Invalid Date. The Date Selected Is In The Future</string>
    <string name="invalid_date_past">Invalid Date. The Date Must Be After Jan 1, 2016</string>
    <string name="no_distance_or_time">Either Distance or Time Must Be Entered</string>
    <string name="invalid_distance">Invalid Distance Entered</string>
    <string name="invalid_minutes">Invalid Minutes Entered</string>
    <string name="invalid_seconds">Invalid Seconds Entered</string>
    <string name="internal_error">Internal Error.  Try Again.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="amp_username"><![CDATA[&username]]></string>
    <string name="member_since">Member Since: </string>
    <string name="_2016_12_23">2016-12-23[D]</string>
    <string name="groups_debug"><![CDATA[Men\'s Cross Country[D]\nMens\'s Track & Field[D]]]></string>
    <string name="description_debug">I like to run.[D]</string>
    <string name="description_profile">Description:</string>
    <string name="fav_event_debug">8K XC[D]</string>
    <string name="favorite_event">Favorite Event:</string>
    <string name="location_profile">Location:</string>
    <string name="location_debug">Riverside, CT[D]</string>
    <string name="year_debug">2017[D]</string>
    <string name="class_year">Class Year:</string>
    <string name="_0">0</string>
    <string name="career">Career:</string>
    <string name="past_year">Past Year:</string>
    <string name="past_month">Past Month:</string>
    <string name="past_week">Past Week:</string>
    <string name="workout_mileage">Workout Mileage</string>
    <string name="running_mileage">Running Mileage</string>
    <string name="body_feel">Body Feel</string>
    <string name="logs_tab">Logs</string>
    <string name="statistics_tab">Statistics</string>
    <string name="at">\@</string>
    <string name="invalid_class_year">Invalid Class Year</string>
    <string name="group_name">Group Name</string>
    <string name="members">Members:</string>
    <string name="no_description">No Description</string>
    <string name="no_internet">No Internet Connection. Try Again.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter Your Email Address:</string>
    <string name="submit_new_pw">Submit New Password</string>
    <string name="verification_code">Verification Code:</string>
    <string name="no_user_email">No User has this Email</string>
    <string name="server_errors">Server Error, Try Again</string>
    <string name="new_message">New Message:</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="locked_page">Locked Page</string>
</resources>
