<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="48sp"
        android:text="@string/saintsxctf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:text="@string/log_in"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:text="@string/sign_up"/>

    </LinearLayout>

</LinearLayout>