<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    tools:context="com.example.andy.saints_xctf_android.log.LogDialogFragment">

    <LinearLayout
        android:id="@+id/log_forms"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:clickable="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_log"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/log_feel_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textSize="16sp"
                android:textAlignment="viewEnd"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/log_run_name_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_name"
                android:textSize="18sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/log_run_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/log_location_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="18sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/log_location"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:maxLength="50"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/log_date_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp" />

            <Button
                android:id="@+id/log_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/pick_date"/>

            <TextView
                android:id="@+id/log_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/_01_01_2017"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/log_type_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_type"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/log_type"
                android:inputType="text"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:minWidth="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/log_distance_tag"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/distance"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/log_distance"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:maxLength="8"/>

            <TextView
                android:id="@+id/log_metric_tag"
                android:text="@string/metric"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/log_metric"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minWidth="150dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/log_time_tag"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/time"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/log_time_minutes"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minWidth="40dp"
                android:maxLength="3"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/ms"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/log_time_seconds"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minWidth="40dp"
                android:maxLength="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/log_feel_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feel"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

        <SeekBar
            android:id="@+id/log_feel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="400dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:max="9"
            android:progress="5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/log_description_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/log_description"
            android:inputType="text"
            android:lines="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="255"/>

        </LinearLayout>

        <TextView
            android:id="@+id/log_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/colorAccent"
            android:text=""
            android:focusable="true"
            android:focusableInTouchMode="true">
        </TextView>

    </LinearLayout>

    <include layout="@layout/progress_overlay"/>

</LinearLayout>